--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Unit Test
+name: Tests
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Run Go and Rust tests
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -25,14 +25,14 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
 
-      - name: Get Go dependencies
-        run: go mod download
+      - name: Cache ffi build
+        uses: actions/cache@v4
+        with:
+          path: extern/filecoin-ffi
+          key: ${{ runner.os }}-build-ffi
 
       - name: Build ffi deps
         run: make ffi-deps
-
-      - name: Build
-        run: make
 
       - name: Run Go tests
         run: go test -v ./...
