--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
-            latest=false
+            latest=${{ startsWith(github.ref, 'refs/tags/') }}
           tags: |
             type=semver,pattern={{raw}}
             type=semver,pattern={{major}}.{{minor}}
