--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.22'
-      - run: make go-deps
+      - run: make ffi-deps
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
