--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -3,15 +3,15 @@ name: Build
 on:
   push:
     branches:
-      - 'main'
+      - "main"
     tags:
-      - 'v*'
+      - "v*"
   pull_request:
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  GO_BUILD_IMAGE: golang:1.23.2
+  GO_BUILD_IMAGE: golang:1.24.2
 
 jobs:
   build:
